NO-JIRA Fix Quality Gate status